--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EnglishApp</string>
+    <string name="app_name">English Grammar</string>
     <string name="nav_home">Home</string>
     <string name="nav_notifi">Course</string>
     <string name="nav_person">Exercise</string>
